add ro-based puf v0

--- a/info.yaml
+++ b/info.yaml
@@ -1,21 +1,26 @@
 # Tiny Tapeout project information
 project:
-  title:        ""      # Project title
-  author:       ""      # Your name
-  discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  title:        "RO-based Physically Unclonable Function (PUF)"      # Project title
+  author:       "Pablo Aravena"      # Your name
+  discord:      "litneet64"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  description:  "Implementation of a Ring Oscillator-based Physically Unclonable Function (PUF) in Sky130"      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
-  clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
+  clock_hz:     10_000_000       # Clock frequency in Hz (or 0 if not applicable)
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
   tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
 
   # Your top module name must start with "tt_um_". Make it unique by including your github username:
-  top_module:  "tt_um_example"
+  top_module:  "tt_um_litneet64_ro_puf"
   
   # List your project's source files here. Source files must be in ./src and you must list each source file separately, one per line:
-  source_files:        
-    - "project.v"
+  source_files:       
+    - "arbiter.v" 
+    - "counter.v"
+    - "mux_16.v"
+    - "ring_osc.v"
+    - "puf_bit.v"
+    - "tt_um_ro_puf.v"
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
